[package]
name = "operagx-nitro-gen"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.5", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
chrono = "0.4.15"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
proctitle = "0.1.1"
